Fixed CSS to flex better as display size width decreases on smaller devices

--- a/client/src/RatingsAndReviews/css/MainContainer.css
+++ b/client/src/RatingsAndReviews/css/MainContainer.css
@@ -96,7 +96,7 @@ body.active-modal {
       border-bottom: 2px solid black;
     }
     .large-rating-number {
-      font-size: 64px;
+      font-size: 54px;
       margin-right: 12px;
       margin-left: 10px;
       color: #2F4858;
